--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,30 @@
   @apply font-bold py-2 px-2 rounded;
 }
 
-.btn-blue {
+.btn-primary {
   @apply bg-blue-500 text-white;
 }
 
-.btn-blue:hover {
+.btn-primary:hover {
   @apply bg-blue-700;
+}
+
+.btn-danger {
+  @apply bg-red-500 text-white;
+}
+
+.btn-danger:hover {
+  @apply bg-red-700;
+}
+
+.btn-primary:disabled {
+  @apply bg-gray-400;
+  @apply opacity-50;
+}
+
+.modal {
+  @apply bg-gray-400;
+  @apply opacity-40;
+  @apply fixed;
+  @apply inset-0;
 }
